<resources>
    <string name="app_name">BIAO\'S ORDER</string>
    <string name="id">ID:</string>
    <string name="password">密码:</string>
    <string name="button_login">登录</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yuan">¥</string>
    <string name="maoHao">:</string>
    <string name="fab_content_desc">shoppingCar\n</string>
    <string name="fab_content_desc2">下单\n</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="splash">BIAO\'S ORDER</string>
    <string name="hall">大厅</string>
    <string name="personalCenter">个人中心</string>
    <string name="NO">桌号:</string>
    <string name="exit">退出登录</string>
    <string name="title_activity_test">testActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="checkout_tip">确认订单</string>
    <string name="wechat">微信支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="cash">现金支付</string>
    <string name="submit">提交订单</string>
    <string name="total">合计:￥</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="addShoppingCar">加入购物车</string>
    <string name="cancel">取消</string>
    <string name="taste">口味</string>
    <string name="notSpicy">不辣</string>
    <string name="slightlySpicy">微辣</string>
    <string name="mediumSpicy">中辣</string>
    <string name="spicy">爆辣</string>
    <string name="one">1</string>
    <string name="placeAnOrder">下单</string>
    <string name="salesTotal">营业统计</string>
    <string name="userSetting">员工管理</string>
    <string name="online">在线客服</string>
    <string name="aboutUs">关于我们</string>
    <string name="page_title">大厅</string>
    <string name="veg_title">点餐</string>
    <string name="content_top_one">1</string>
    <string name="content_top_two">2</string>
    <string name="delete_table">删除餐桌</string>
    <string name="add_table">添加餐桌</string>
    <string name="delete_vegetable">删除餐品</string>
    <string name="add_vegetable">添加菜品</string>
    <string name="todo">TODO</string>
    <string name="searchHistory">查询历史订单</string>
    <string name="searchOrder">搜索菜品</string>
    <string name="orderNo">订单号:</string>
    <string name="delete_order">删除订单</string>
    <string name="orderPic">orderPic</string>
    <string name="sales">月销:</string>
    <string name="add_button_description">添加餐品数量</string>
    <string name="minus_button_description">减少餐品数量</string>
    <string name="businessData">营业数据概况</string>
    <string name="vegetablesCount">菜品销售数量统计</string>
    <string name="turnover">营业额(元)</string>
    <string name="ordersCount">订单数(个)</string>
    <string name="allSales"><![CDATA[查看完整榜单 >]]></string>
    <string name="fen">份</string>
    <string name="menuSet">菜单编辑</string>
    <string name="editMenu">编辑菜品信息</string>
    <string name="ok">确认修改</string>
    <string name="top">top</string>
    <string name="zhankai"><![CDATA[成员列表|>]]></string>
    <string name="zuo"><![CDATA[<]]></string>
    <string name="you"><![CDATA[>]]></string>

</resources>