<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayish"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/salesBarLayout"

        android:background="#DCDCDC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topVegetableBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/back"
            app:title="营业统计"
            app:titleCentered="true"
            app:titleTextAppearance="@style/CustomToolbarTitleTextAppearance" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/hall_card"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/businessData"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_turnover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turnover" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_toEndOf="@+id/linear1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_ordersCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ordersCount" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/hall_card"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingClass">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegetablesCount"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="32dp">

        </com.github.mikephil.charting.charts.PieChart>

        <TextView
            android:id="@+id/tv_allSales"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="12sp"
            android:text="@string/allSales"/>


    </LinearLayout>


</LinearLayout>