<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/hall_card"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="2dp"
    android:padding="8dp">

    <FrameLayout
        android:id="@+id/order_frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_dish"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:elevation="1dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedImageView"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/order_frameLayout"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/maoHao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/tv_name"
        android:text="@string/maoHao"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/maoHao"
        android:layout_marginStart="2dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_yuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="2dp"
        android:layout_toEndOf="@+id/tv_price"
        android:text="@string/yuan"
        android:textSize="14sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/tv_yue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/order_frameLayout"
        android:layout_toEndOf="@+id/order_frameLayout"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:textSize="12sp"
        android:text="@string/sales"
        />
    <TextView
        android:id="@+id/tv_sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/order_frameLayout"
        android:layout_toEndOf="@+id/tv_yue"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/btn_dishAdd"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="12dp"
        android:background="@drawable/add_state"
        android:foreground="@drawable/add" />
</RelativeLayout>